--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
