--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
