--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_SERVER_URL = https://myzingmp3clone.vercel.app/api
 # REACT_APP_SERVER_URL = http://localhost:5000/api
+SKIP_PREFLIGHT_CHECK =  true
