--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
