feat: search song

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-REACT_APP_SERVER_URL = https://myzingmp3clone.vercel.app/api
+# REACT_APP_SERVER_URL = https://myzingmp3clone.vercel.app/api
+REACT_APP_SERVER_URL = https://zingmp3-server-vercel.vercel.app/api
+
 # REACT_APP_SERVER_URL = http://localhost:5000/api
 SKIP_PREFLIGHT_CHECK =  true
